--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
     <div class="page-header__wrapper">
-      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy">
+      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy.">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/logo/logo-header-desktop.svg" width="202" height="59"
             type="image/svg+xml">
@@ -32,20 +32,20 @@
         </picture>
       </a>
       <button class="page-header__button page-header__button--no-js page-header__button--js" type="button"
-        aria-label="Открыть меню"></button>
+        aria-label="Меню"></button>
     </div>
     <nav class="page-header__navigation navigation">
       <!-- no-js защита работы без JS -->
       <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
-          <a class="navigation__link" href="index.html" aria-label="Главная">Главная</a>
+          <a class="navigation__link" href="index.html" aria-label="Главная.">Главная</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link navigation__link--current" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
+          <a class="navigation__link navigation__link--current" href="catalog.html" aria-label="Каталог.">Каталог продукции</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="form.html" aria-label="Подбор программы">Подбор программы</a>
+          <a class="navigation__link" href="form.html" aria-label="Подбор программы.">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -55,7 +55,7 @@
       <h2 class="catalog__heading">Каталог продукции</h2>
       <ul class="catalog__list">
         <li class="catalog__item card">
-          <a class="card__link card__link--image" href="index.html" aria-label="Cat Energy PRO 500 г">
+          <a class="card__link card__link--image" href="index.html" aria-label="Cat Energy PRO 500 г" id="pro">
             <picture>
               <!-- webp -->
               <source type="image/webp" media="(min-width: 768px)"
@@ -91,7 +91,7 @@
               <span class="description__definition">700 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
           <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 1000 г">
@@ -130,7 +130,7 @@
               <span class="description__definition">1000 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
           <a class="card__link card__link--image" href="#">
@@ -169,7 +169,7 @@
               <span class="description__definition">700 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
           <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 1000 г">
@@ -208,10 +208,10 @@
               <span class="description__definition">1000 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
-          <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 500 г">
+          <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 500 г" id="slim">
             <picture>
               <!-- webp -->
               <source type="image/webp" media="(min-width: 768px)"
@@ -247,7 +247,7 @@
               <span class="description__definition">400 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
           <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 1000 г">
@@ -286,7 +286,7 @@
               <span class="description__definition">700 Р.</span>
             </li>
           </ul>
-          <button class="card__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item card">
           <a class="card__link card__link--image" href="#" aria-label="Cat Energy PRO 500 г">
@@ -325,7 +325,7 @@
               <span class="description__definition">500 Р.</span>
             </li>
           </ul>
-          <button class="card__button button " type="button" aria-label="Заказать">Заказать</button>
+          <button class="card__button button " type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="catalog__item catalog__item--all card card--all">
           <a class="card__link card__link--all" href="#">
@@ -344,25 +344,25 @@
           <h3 class="other__title">Сахарозаменитель</h3>
           <p class="other__text">1 упаковка (100 г)</p>
           <p class="other__price">200 Р</p>
-          <button class="other__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="other__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="other__item">
           <h3 class="other__title ">Питьевая вода</h3>
           <p class="other__text">5 литров</p>
           <p class="other__price">50 Р</p>
-          <button class="other__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="other__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="other__item">
           <h3 class="other__title ">Молоко</h3>
           <p class="other__text">1 литр</p>
           <p class="other__price">100 Р</p>
-          <button class="other__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="other__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
         <li class="other__item">
           <h3 class="other__title ">Витамины</h3>
           <p class="other__text">1 упаковка (30 г)</p>
           <p class="other__price">300 Р</p>
-          <button class="other__button button" type="button" aria-label="Заказать">Заказать</button>
+          <button class="other__button button" type="button" aria-label="Заказать.">Заказать</button>
         </li>
       </ul>
       <div class="other__gifts">
@@ -375,9 +375,9 @@
       <form class="subscription__form form form-line" action="https://echo.htmlacademy.ru/" method="post">
         <label class="form__control control" for="owner-email">
           <input class="control__input control__input--medium" type="email" name="owner-email"
-            id="owner-email" placeholder="kuklachev@gmail.com" aria-label="E-mail" required>
+            id="owner-email" placeholder="kuklachev@gmail.com" aria-label="Введите ваш E-mail" required>
         </label>
-        <button class="form__button button button--base" type="submit">Подписаться</button>
+        <button class="form__button button button--base" type="submit" aria-label="Подписаться.">Подписаться</button>
       </form>
     </section>
     <section class="page-main__invite invite invite--second">
@@ -388,43 +388,41 @@
           <span  class="invite__text-city">Санкт-Петербург</span>
         </h3>
       </div>
-      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe>
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe> -->
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe> -->
+      <iframe  class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy">
-      <svg class="logo__icon" width="128" height="25">
+    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
+      <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
         <use href="icons/stack.svg#footer-logo"></use>
       </svg>
     </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="VK.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_vkontakte"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="YouTube.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_youtube"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="Telegram.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_telegram"></use>
           </svg>
         </a>
       </li>
     </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy.">
       <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="htmlacademy__icon" width="27" height="34">
+      <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false">
         <use href="icons/stack.svg#html-academy"></use>
       </svg>
     </a>
