--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
     <div class="page-header__wrapper">
-      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy">
+      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy.">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/logo/logo-header-desktop.svg" width="202" height="59"
             type="image/svg+xml">
@@ -32,20 +32,20 @@
         </picture>
       </a>
       <button class="page-header__button page-header__button--no-js page-header__button--js" type="button"
-        aria-label="Открыть меню"></button>
+        aria-label="Меню"></button>
     </div>
     <nav class="page-header__navigation navigation">
       <!-- no-js защита работы без JS -->
       <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
-          <a class="navigation__link" href="index.html" aria-label="Главная">Главная</a>
+          <a class="navigation__link" href="index.html" aria-label="Главная.">Главная</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
+          <a class="navigation__link" href="catalog.html" aria-label="Каталог.">Каталог продукции</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link  navigation__link--current" href="form.html" aria-label="Подбор программы">Подбор программы</a>
+          <a class="navigation__link  navigation__link--current" href="form.html" aria-label="Подбор программы.">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -59,56 +59,56 @@
         <label class="group__control control" for="cat-name">
           <span class="control__name">Имя:*</span>
           <input class="control__input" type="text" name="cat-name" id="cat-name"
-            placeholder="Барсик" aria-label="Имя кота" required>
+            placeholder="Барсик" aria-label="Введите имя кота" required>
         </label>
         <label class="group__control control" for="cat-weight">
           <span class="control__name">Вес (кг):*</span>
           <input class="control__input control__input--number" type="number" name="cat-weight"
-            id="cat-weight" placeholder="7" aria-label="Вес кота" required min="0">
+            id="cat-weight" placeholder="7" aria-label="Введите вес кота" required min="0">
         </label>
         <label class="group__control control" for="cat-age">
           <span class="control__name">Возраст (лет):</span>
           <input class="control__input control__input--number" type="number" name="cat-age"
-            id="cat-age" placeholder="7" aria-label="Возраст кота" min="0">
+            id="cat-age" placeholder="7" aria-label="Введите возраст кота" min="0">
         </label>
       </fieldset>
       <fieldset class="form__group group group--program">
         <legend class="group__name visually-hidden">Подобрать программу</legend>
         <label class="group__control control control--program" for="slim">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="slim"
-            value="slim" checked aria-label="Похудение">
+            value="slim" checked aria-label="Выберите программу похудения.">
           <span class="control__mark control__mark--radio"></span>
           <span class="control__name control__name--radio">Похудение</span>
         </label>
         <label class="group__control control control--program" for="pro">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="pro"
-            value="pro" aria-label="Набор массы">
+            value="pro" aria-label="Выберите программу набора массы.">
           <span class="control__mark control__mark--radio"></span>
           <span class="control__name control__name--radio">Набор массы</span>
         </label>
         <label class="group__control control control--program" for="help">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="help"
-            value="help" aria-label="Не знаю (Нужен ваш совет)">
+            value="help" aria-label="Получить консультацию.">
           <span class="control__mark control__mark--radio"></span>
           <span class="control__name control__name--radio">Не знаю (Нужен ваш совет)</span>
         </label>
       </fieldset>
       <fieldset class="form__group group group--contacts">
         <legend class="group__name visually-hidden">Контактные данные (владельца кота)</legend>
-        <span class="group__title">Контактные данные (владельца кота)</span>
+        <span class="group__title">Контактные данные <br class="group__title-wrapping">(владельца кота)</span>
         <label class="group__control control control--contacts" for="owner-email">
           <span class="control__name">E-mail:*</span>
           <input class="control__input control__input--contacts" type="email" name="email" id="owner-email"
-            placeholder="kuklachev@gmail.com" aria-label="E-mail" required>
-          <svg class="control__icon control__icon--email" width="18" height="14">
+            placeholder="kuklachev@gmail.com" aria-label="Укажите ваш E-mail." required>
+          <svg class="control__icon control__icon--email" width="18" height="14" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#form_icon-mail"></use>
           </svg>
         </label>
         <label class="group__control control control--contacts" for="owner-phone">
           <span class="control__name">Телефон:*</span>
           <input class="control__input control__input--contacts control__input--phone" type="tel" name="owner-phone"
-            id="owner-phone" placeholder="8 (960) 900-60-90" aria-label="Телефон" required>
-          <svg class="control__icon control__icon--phone" width="22" height="22">
+            id="owner-phone" placeholder="8 (960) 900-60-90" aria-label="Укажите ваш телефон." required>
+          <svg class="control__icon control__icon--phone" width="22" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#form_icon-phone"></use>
           </svg>
         </label>
@@ -117,38 +117,38 @@
         <legend class="group__name visually-hidden">Комментарий</legend>
         <span class="group__title">Комментарий</span>
         <textarea class="group__control control control--comment" name="comment" id="owner-comment"
-          placeholder="Расскажите обо всех повадках кота" aria-label="Комментарий"></textarea>
+          placeholder="Расскажите обо всех повадках кота" aria-label="Оставте комментарий."></textarea>
       </fieldset>
       <fieldset class="form__group group group--additionally">
         <legend class="group__name visually-hidden">Дополнительно</legend>
         <span class="group__title group__title--additionally">Дополнительно</span>
         <label class="group__control control control-additionally" for="sweetener">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="sweetener"
-            id="sweetener" value="yes" checked aria-label="Cахарозаменитель">
+            id="sweetener" value="yes" checked aria-label="Добавить сахарозаменитель.">
           <span class="control__mark control__mark--checkbox"></span>
-          <span class="control__name control__name--checkbox">Cахарозаменитель</span>
+          <span class="control__name control__name--checkbox">Сахарозаменитель</span>
         </label>
         <label class="group__control control control-additionally" for="water">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="water" id="water"
-            value="yes" aria-label="Питьевая вода">
+            value="yes" aria-label="Добавить питьевую воду.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Питьевая вода</span>
         </label>
         <label class="group__control control control-additionally" for="milk">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="milk" id="milk"
-            value="yes" aria-label="Молоко">
+            value="yes" aria-label="Добавить молоко.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Молоко</span>
         </label>
         <label class="group__control control control-additionally" for="vitamins">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="vitamins"
-            id="vitamins" value="yes" aria-label="Витамины">
+            id="vitamins" value="yes" aria-label="Добавить витамины.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Витамины</span>
         </label>
       </fieldset>
 
-      <button class="page-main__form-button button button--auxiliary" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
+      <button class="page-main__form-button button button--auxiliary" type="submit" aria-label="Отправить заявку.">Отправить заявку</button>
       <p class="form__text">* &#8212;Обязательные поля</p>
     </form>
     <section class="page-main__invite invite invite--second">
@@ -159,43 +159,41 @@
           <span  class="invite__text-city">Санкт-Петербург</span>
         </h3>
       </div>
-      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe>
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe> -->
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe> -->
+      <iframe  class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy">
-      <svg class="logo__icon" width="128" height="25">
+    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
+      <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
         <use href="icons/stack.svg#footer-logo"></use>
       </svg>
     </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="VK.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_vkontakte"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="YouTube.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_youtube"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="Telegram.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_telegram"></use>
           </svg>
         </a>
       </li>
     </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy.">
       <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="htmlacademy__icon" width="27" height="34">
+      <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false">
         <use href="icons/stack.svg#html-academy"></use>
       </svg>
     </a>
