--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
     <div class="page-header__wrapper">
-      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy">
+      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy.">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/logo/logo-header-desktop.svg" width="202" height="59"
             type="image/svg+xml">
@@ -32,20 +32,18 @@
         </picture>
       </a>
       <button class="page-header__button page-header__button--no-js page-header__button--js" type="button"
-        aria-label="Открыть меню"></button>
+        aria-label="Меню"></button>
     </div>
     <nav class="page-header__navigation navigation navigation--auxiliary">
-      <!-- no-js защита работы без JS -->
-      <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--auxiliary navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
-          <a class="navigation__link navigation__link--current" href="index.html" aria-label="Главная">Главная</a>
+          <a class="navigation__link navigation__link--current" href="index.html" aria-label="Главная.">Главная</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
+          <a class="navigation__link" href="catalog.html" aria-label="Каталог.">Каталог продукции</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="form.html" aria-label="Подбор программы">Подбор программы</a>
+          <a class="navigation__link" href="form.html" aria-label="Подбор программы.">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -73,7 +71,7 @@
         <img class="hero__image" src="images/hero/can-mobile@1x.png" srcset="images/hero/can-mobile@2x.png" width="280"
           height="270" alt="Фотография Cat Energy Pro Курица">
       </picture>
-      <a class="hero__button button button--auxiliary" href="form.html" aria-label="Подобрать программу">Подобрать программу</a>
+      <a class="hero__button button button--auxiliary" href="form.html" aria-label="Подобрать программу.">Подобрать программу</a>
     </section>
     <section class="page-main__programs programs">
       <h2 class="visually-hidden">Наши программы</h2>
@@ -82,7 +80,7 @@
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
             диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="programs__link" href="#" aria-label="Каталог slim">Каталог slim
+          <a class="programs__link" href="catalog.html#slim" aria-label="Каталог slim">Каталог slim
             <svg class="programs__link-icon" width="24" height="12">
               <use href="icons/stack.svg#icon-arrow"></use>
             </svg>
@@ -92,8 +90,8 @@
           <h3 class="programs__title">Набор массы</h3>
           <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
             вашему коту нарастить необходимые мышцы!</p>
-          <a class="programs__link" href="#" aria-label="Каталог pro">Каталог pro
-            <svg class="programs__link-icon" width="24" height="12">
+          <a class="programs__link" href="catalog.html#pro" aria-label="Каталог pro">Каталог pro
+            <svg class="programs__link-icon" width="24" height="12" aria-hidden="true" focusable="false">
               <use href="icons/stack.svg#icon-arrow"></use>
             </svg>
           </a>
@@ -151,7 +149,7 @@
               srcset="images/example/boris-before-tablet@1x.png 1x, images/example/boris-before-tablet@2x.png 2x"
               width="560" height="512">
             <img class="slider__image" src="images/example/boris-before-mobile@1x.png"
-              srcset="images/example/boris-before-mobile@2x.png" alt="Кот Борис до" width="280" height="256">
+              srcset="images/example/boris-before-mobile@2x.png" alt="Кот Борис до." width="280" height="256">
           </picture>
         </div>
         <div class="slider__wrapper slider__wrapper-after">
@@ -168,11 +166,11 @@
               srcset="images/example/boris-after-tablet@1x.png 1x, images/example/boris-after-tablet@2x.png 2x"
               width="560" height="512">
             <img class="slider__image" src="images/example/boris-after-mobile@1x.png"
-              srcset="images/example/boris-after-mobile@2x.png" alt="Кот Борис после" width="280" height="256">
+              srcset="images/example/boris-after-mobile@2x.png" alt="Кот Борис после." width="280" height="256">
           </picture>
         </div>
-        <button class="slider__control" type="button" aria-label="Управление слайдером">
-          <svg class="slider__thumb" width="40" height="40">
+        <button class="slider__control" type="button" aria-label="Управление слайдером.">
+          <svg class="slider__thumb" width="40" height="40" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#thumb"></use>
           </svg>
         </button>
@@ -186,43 +184,41 @@
           <span  class="invite__text-city">Санкт-Петербург</span>
         </h3>
       </div>
-      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe>
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe> -->
-      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe> -->
+      <iframe  class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy">
-      <svg class="logo__icon" width="128" height="25">
+    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
+      <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
         <use href="icons/stack.svg#logo-footer"></use>
       </svg>
     </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="VK.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_vkontakte"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="YouTube.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_youtube"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram">
-          <svg class="social__icon" width="28" height="22">
+        <a class="social__link" href="#" aria-label="Telegram.">
+          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
             <use href="icons/stack.svg#social_telegram"></use>
           </svg>
         </a>
       </li>
     </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy.">
       <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="htmlacademy__icon" width="27" height="34">
+      <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false" >
         <use href="icons/stack.svg#html-academy"></use>
       </svg>
     </a>
