--- a/source/index.html
+++ b/source/index.html
@@ -191,7 +191,9 @@
           <span  class="invite__text-city">Санкт-Петербург</span>
         </h3>
       </div>
-      <iframe  class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
+      <div class="invite__map map">
+        <iframe  class="map__frame" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
+      </div>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
