фикс замечаний карты

--- a/source/index.html
+++ b/source/index.html
@@ -192,7 +192,7 @@
         </h3>
       </div>
       <div class="invite__map map">
-        <iframe  class="map__frame" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
+        <iframe  class="map__frame map__frame--no-js" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor"></iframe>
       </div>
     </section>
   </main>
