Исправляет футер и главную страницу.

--- a/source/form.html
+++ b/source/form.html
@@ -170,40 +170,43 @@
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
-      <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
-        <use href="icons/stack.svg#footer-logo"></use>
-      </svg>
-    </a>
-    <ul class="page-footer__social social">
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_vkontakte"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_youtube"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram.">
-          <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
-            <use href="icons/stack.svg#social_telegram"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy.">
-      <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false">
-        <use href="icons/stack.svg#html-academy"></use>
-      </svg>
-    </a>
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy.">
+        <svg class="logo__icon" width="128" height="25" aria-hidden="true" focusable="false">
+          <use href="icons/stack.svg#logo-footer"></use>
+        </svg>
+      </a>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="VK.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_vkontakte"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="YouTube.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_youtube"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#" aria-label="Telegram.">
+            <svg class="social__icon" width="28" height="22" aria-hidden="true" focusable="false">
+              <use href="icons/stack.svg#social_telegram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"
+        aria-label="HTML Academy.">
+        <p class="htmlacademy__text">HTML Academy</p>
+        <svg class="htmlacademy__icon" width="27" height="34" aria-hidden="true" focusable="false">
+          <use href="icons/stack.svg#html-academy"></use>
+        </svg>
+      </a>
+    </div>
   </footer>
 </body>
 
