--- a/source/index.html
+++ b/source/index.html
@@ -112,19 +112,19 @@
       <h2 class="visually-hidden">Как работает Cat Energy Pro</h2>
       <p class="functional__heading">Как это работает</p>
       <ol class="functional__list">
-        <li class="functional__item">
+        <li class="functional__item functional__item--one">
           <h3 class="functional__text functional__text--leaf">Функциональное питание содержит только полезные
             питательные вещества.</h3>
         </li>
-        <li class="functional__item">
+        <li class="functional__item functional__item--two">
           <h3 class="functional__text functional__text--cook">Выпускается в виде порошка, который нужно лишь залить
             кипятком и готово.</h3>
         </li>
-        <li class="functional__item">
+        <li class="functional__item functional__item--three">
           <h3 class="functional__text functional__text--eat">Замените один-два приема обычной еды на наше функциональное
             питание.</h3>
         </li>
-        <li class="functional__item">
+        <li class="functional__item functional__item--four">
           <h3 class="functional__text functional__text--scales">Уже через месяц наслаждайтесь изменениями к лучшему
             вашего питомца!</h3>
         </li>
